# studiomaster

./: .gitignore  CMakeLists.txt  Dockerfile.server  README.md  installer.iss
.github/workflows/: windows-release.yml
JUCE/examples/Assets/Notifications/sounds/: demonstrative.caf
JUCE/examples/DemoRunner/Builds/iOS/: Icon.icns
JUCE/extras/AudioPluginHost/Builds/iOS/: Icon.icns
JUCE/extras/Projucer/Builds/MacOSX/: Icon.icns
Source/: AutoUpdater.cpp  ChatView.cpp  ConnectView.cpp  PeersContainerView.cpp  SonoLookAndFeel.cpp  SonoStandaloneFilterApp.cpp  SonobusPluginEditor.cpp  SonobusPluginProcessor.cpp  VersionInfo.cpp  VersionInfo.h
Source/android/: SonoBusActivity.cpp  SonoBusActivity.h
Source/android/java/com/sonosaurus/sonobus/: SonoBusActivity.java  SonoBusService.java
buid/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  StudioMaster.slnx  StudioMaster.vcxproj  StudioMaster.vcxproj.filters  StudioMasterInst.vcxproj  StudioMasterInst.vcxproj.filters  StudioMasterInst_All.vcxproj  StudioMasterInst_SBData.vcxproj  StudioMasterInst_SBData.vcxproj.filters  StudioMasterInst_VST3.vcxproj  StudioMasterInst_VST3.vcxproj.filters  StudioMasterInst_rc_lib.vcxproj  StudioMasterInst_rc_lib.vcxproj.filters  StudioMaster_All.vcxproj  StudioMaster_SBData.vcxproj  StudioMaster_SBData.vcxproj.filters  StudioMaster_Standalone.vcxproj  StudioMaster_VST3.vcxproj  StudioMaster_VST3.vcxproj.filters  StudioMaster_rc_lib.vcxproj  StudioMaster_rc_lib.vcxproj.filters  cmake_install.cmake  juce_vst3_helper.vcxproj  juce_vst3_helper.vcxproj.filters
buid/StudioMasterInst_artefacts/JuceLibraryCode/: Info.txt
buid/StudioMasterInst_artefacts/JuceLibraryCode/Debug/: Defs.txt
buid/StudioMasterInst_artefacts/JuceLibraryCode/MinSizeRel/: Defs.txt
buid/StudioMaster_artefacts/JuceLibraryCode/: Info.txt
buid/StudioMaster_artefacts/JuceLibraryCode/Debug/: Defs.txt
buid/StudioMaster_artefacts/JuceLibraryCode/Release/: Defs.txt
buid/juce_binarydata_StudioMasterInst_SBData/JuceLibraryCode/: input_file_list
doc/: README_MAC.txt  README_WINDOWS.txt  SonoBus User Guide.md
images/: LaunchScreen.storyboard  SonobusLogo.xcf
linux/: BUILDING.md  deb_get_prereqs.sh  fedora_get_prereqs.sh  install.sh  sonobus.desktop  uninstall.sh
localization/: localized_de.txt  localized_es.txt  localized_fr.txt  localized_it.txt  localized_ja.txt  localized_ko.txt  localized_nl.txt  localized_pt-br.txt  localized_pt-pt.txt  localized_ru.txt  localized_zh-hans.txt
mobile/: SonoBusMobile.jucer
mobile/Builds/Android/: settings.gradle
mobile/Builds/Android/app/: CMakeLists.txt
mobile/Builds/Android/app/src/debug/res/values/: string.xml
mobile/Builds/Android/app/src/main/: AndroidManifest.xml
mobile/Builds/Android/gradle/wrapper/: gradle-wrapper.properties
mobile/Builds/iOS/: Icon.icns  Info-AUv3_AppExtension.plist  Info-Standalone_Plugin.plist
mobile/Builds/iOS/SonoBus.xcodeproj/: project.pbxproj
mobile/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
release/: codesign.sh  distmac.sh  distwin.sh  makedmg.sh  makepkgdmg.sh  notarizedmg.sh  wininstaller.iss
release/SonoBusLayout/: Info.plist
release/SonoBusLayout/Icons/: LayoutItem.0F3579EF-C06B-4563-90DB-5A7DF7BAC32B.icns  LayoutItem.22420AE3-0B22-4380-802C-2579AEDA756C.icns  LayoutItem.25D3A305-E6AE-4000-9CE4-D616D0DF22A7.icns  LayoutItem.E4E0AF01-0BD8-44B7-8E8D-848354E130E6.icns  LayoutItem.E7A4BEB2-AC0A-4490-92C8-1E47B256C0F6.icns  LayoutItem.FD8ED432-C7D4-4775-96BA-4BC525133960.icns
release/SonoBusPkgLayout/: Info.plist
release/SonoBusPkgLayout/Icons/: LayoutItem.5B60441E-1C58-4F89-9871-D86D80BEF2C1.icns  LayoutItem.CD1DEE20-0797-4524-BEE2-EFFF2A4C56EA.icns
release/macpkg/: SonoBus.pkgproj  intro.txt
scripts/: mac_prebuild.sh
snap/: snapcraft.yaml
snap/gui/: sonobus.desktop
